force-app/main/default/objects/Loan_Calculation_Product__c/Loan_Calculation_Product__c.object-meta.xml
<CustomObject>
    <description
  >Auto, Unsecured, Credit card, and Line of credit products for loan calculation.</description>
    <label>Loan Calculation Product</label>
    <nameField>
        <displayFormat>LCP-{000000}</displayFormat>
        <label>Loan Calculation Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Calculation Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>