force-app/main/default/objects/Loan_Calculation_Product__c/fields/Ability_to_Service_After_Number__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Service_After_Number__c</fullName>
    <description>Ability to Service After(TDSR)</description>
    <label>Ability to Service After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>