force-app/main/default/objects/Loan_Calculation_Product__c/fields/Ability_to_Service_Before_Number__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Service_Before_Number__c</fullName>
    <description>Ability to Service Before (TDSR)</description>
    <label>Ability to Service Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>