force-app/main/default/objects/Loan_Calculation_Product__c/fields/Account_Holder_s_text__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_s_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Holder(s)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>