force-app/main/default/objects/Loan_Calculation_Product__c/fields/Account_Hypothecated_list__c.field-meta.xml
<CustomField>
    <fullName>Account_Hypothecated_list__c</fullName>
    <label>Account Hypothecated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>