force-app/main/default/objects/Loan_Calculation_Product__c/fields/Account_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_List__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings Account Types</fullName>
            </value>
            <value>
                <fullName>Fixed Deposit Account Types</fullName>
            </value>
            <value>
                <fullName>Repo</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>