force-app/main/default/objects/Loan_Calculation_Product__c/fields/Annual_Creditor_Life_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Annual_Creditor_Life_Fee_Number__c</fullName>
    <description>Annual Creditor Life Fee</description>
    <label>Annual Creditor Life Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>