force-app/main/default/objects/Loan_Calculation_Product__c/fields/Annual_Interest_Rate_Deposit_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate_Deposit_Acct_Number__c</fullName>
    <label>Annual Interest Rate on Deposit Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>