force-app/main/default/objects/Loan_Calculation_Product__c/fields/Annual_Membership_Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Annual_Membership_Primary_Number__c</fullName>
    <description>Annual Membership (Primary Applicant)</description>
    <label>Annual Membership (Primary Applicant)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>