force-app/main/default/objects/Loan_Calculation_Product__c/fields/Annual_Membership_Supplementary_Number__c.field-meta.xml
<CustomField>
    <fullName>Annual_Membership_Supplementary_Number__c</fullName>
    <description>Annual Membership (Supplementary CardHolders)</description>
    <label>Annual Membership (Supplementary)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>