force-app/main/default/objects/Loan_Calculation_Product__c/fields/Applicable_Processing_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Processing_Fee_Number__c</fullName>
    <description>Indicate applicable process fee percent</description>
    <label>Applicable Processing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>