force-app/main/default/objects/Loan_Calculation_Product__c/fields/Approved_Starting_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Approved_Starting_Limit_Number__c</fullName>
    <description>Approved Starting Limit</description>
    <label>Approved Starting Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>