force-app/main/default/objects/Loan_Calculation_Product__c/fields/Assignment_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Fee_Number__c</fullName>
    <description>Assignment Fee</description>
    <label>Assignment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>