force-app/main/default/objects/Loan_Calculation_Product__c/fields/Auto_Collateral_DepositPercentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Collateral_DepositPercentage_Number__c</fullName>
    <description>Auto Collateral Deposit Percentage</description>
    <label>Auto Collateral Deposit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>