force-app/main/default/objects/Loan_Calculation_Product__c/fields/Collateral_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type_List__c</fullName>
    <description>Collateral Type</description>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsecured (None)</fullName>
            </value>
            <value>
                <fullName>Cash/Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>