force-app/main/default/objects/Loan_Calculation_Product__c/fields/Computed_Auto_Collateral_Deposit_Number__c.field-meta.xml
<CustomField>
    <fullName>Computed_Auto_Collateral_Deposit_Number__c</fullName>
    <description>Computed Auto Collateral Deposit Percentage</description>
    <label>Computed Auto Collateral Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>