force-app/main/default/objects/Loan_Calculation_Product__c/fields/Coverage_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type_List__c</fullName>
    <description>Coverage Type</description>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Suitable Applicants</fullName>
            </value>
            <value>
                <fullName>Applicant 1 Only</fullName>
            </value>
            <value>
                <fullName>Applicant 2 Only</fullName>
            </value>
            <value>
                <fullName>Applicant 3 Only</fullName>
            </value>
            <value>
                <fullName>Applicant 1 &amp; Applicant 2</fullName>
            </value>
            <value>
                <fullName>Applicant 1 &amp; Applicant 3</fullName>
            </value>
            <value>
                <fullName>Applicant 2 &amp; Applicant 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>