force-app/main/default/objects/Loan_Calculation_Product__c/fields/Credit_Report_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Fee_Number__c</fullName>
    <label>Credit Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>