force-app/main/default/objects/Loan_Calculation_Product__c/fields/Creditor_Life_Insurance_Premium_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Life_Insurance_Premium_Number__c</fullName>
    <description>JN Life Creditor Life Insurance Premium</description>
    <label>JN Life Creditor Life Insurance Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>