force-app/main/default/objects/Loan_Calculation_Product__c/fields/Creditor_Life_Insurance_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Life_Insurance_Rate_Number__c</fullName>
    <label>Creditor Life Insurance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>