force-app/main/default/objects/Loan_Calculation_Product__c/fields/Deduct_1st_month_Payment_from_Loan_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deduct_1st_month_Payment_from_Loan_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduct 1st month Payment from Loan</label>
    <type>Checkbox</type>
</CustomField>