force-app/main/default/objects/Loan_Calculation_Product__c/fields/Deposit_Account_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Balance_Number__c</fullName>
    <label>Deposit Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>