force-app/main/default/objects/Loan_Calculation_Product__c/fields/Deposit_Account_Number_Prefix_text__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Number_Prefix_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Account Number Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>