force-app/main/default/objects/Loan_Calculation_Product__c/fields/Desired_Monthly_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Repayment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Monthly Repayment Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>