force-app/main/default/objects/Loan_Calculation_Product__c/fields/Desired_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Statement_Date__c</fullName>
    <description>Desired Statement Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Statement Date</label>
    <type>Date</type>
</CustomField>