force-app/main/default/objects/Loan_Calculation_Product__c/fields/Estimated_Stamp_Duty_Admin_Charges_Numb__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Stamp_Duty_Admin_Charges_Numb__c</fullName>
    <label>Estimated Stamp Duty &amp; Admin Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>