force-app/main/default/objects/Loan_Calculation_Product__c/fields/Existing_Loan_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Loan_Balance_Number__c</fullName>
    <label>Existing Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>