force-app/main/default/objects/Loan_Calculation_Product__c/fields/Financial_Institution_List__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution_List__c</fullName>
    <label>Financial Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JN Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>JN Fund Managers Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>