force-app/main/default/objects/Loan_Calculation_Product__c/fields/Include_in_Loan_Amount_Flag__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Loan_Amount_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Loan Amount</label>
    <type>Checkbox</type>
</CustomField>