force-app/main/default/objects/Loan_Calculation_Product__c/fields/Include_in_Loan_Amount_JNGI_list__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Loan_Amount_JNGI_list__c</fullName>
    <label>Include in Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No, Paid by Applicant</fullName>
            </value>
            <value>
                <fullName>Yes, Add to Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>