force-app/main/default/objects/Loan_Calculation_Product__c/fields/Interest_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Number__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>