force-app/main/default/objects/Loan_Calculation_Product__c/fields/Interested_in_Creditor_Life_Flag__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Creditor_Life_Flag__c</fullName>
    <label>Interested in Creditor Life</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>