force-app/main/default/objects/Loan_Calculation_Product__c/fields/Interested_in_JNGI_SureCover_flag__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_JNGI_SureCover_flag__c</fullName>
    <label>Interested in JNGI SureCover Programme?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>