force-app/main/default/objects/Loan_Calculation_Product__c/fields/JN_Life_Creditor_Life_Premium_Number__c.field-meta.xml
<CustomField>
    <fullName>JN_Life_Creditor_Life_Premium_Number__c</fullName>
    <label>JN Life Creditor Life Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>