force-app/main/default/objects/Loan_Calculation_Product__c/fields/JNGI_Motor_Premium_1st_Year_during_Numbe__c.field-meta.xml
<CustomField>
    <fullName>JNGI_Motor_Premium_1st_Year_during_Numbe__c</fullName>
    <label>JNGI Motor Premium (1st Year) during</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>