force-app/main/default/objects/Loan_Calculation_Product__c/fields/Legal_Fees_including_GCT_Number__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees_including_GCT_Number__c</fullName>
    <description>Legal Fees(including GCT)</description>
    <label>Legal Fees(including GCT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>