force-app/main/default/objects/Loan_Calculation_Product__c/fields/Life_Insurance_Coverage_List__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Coverage_List__c</fullName>
    <label>Life Insurance Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life and Critical Illness Protection</fullName>
            </value>
            <value>
                <fullName>Life Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>