force-app/main/default/objects/Loan_Calculation_Product__c/fields/Loan_Amount_Market_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Market_Percentage_Number__c</fullName>
    <description>Loan Amount Market Percentage</description>
    <label>Loan Amount Market Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>