force-app/main/default/objects/Loan_Calculation_Product__c/fields/Loan_Calculation_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Calculation_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan calculation</description>
    <label>Loan Calculation</label>
    <referenceTo>Loan_Calculator__c</referenceTo>
    <relationshipLabel>Loan Calculation Products</relationshipLabel>
    <relationshipName>Loan_Calculation_Products</relationshipName>
    <type>Lookup</type>
</CustomField>