force-app/main/default/objects/Loan_Calculation_Product__c/fields/Loan_Purpose_List__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_List__c</fullName>
    <description>Loan Purpose</description>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Acquisition</fullName>
            </value>
            <value>
                <fullName>Auto Repairs</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchase a Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Refinance existing Auto Loan</fullName>
            </value>
            <value>
                <fullName>Equity in a Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Emergency Expenses</fullName>
            </value>
            <value>
                <fullName>Purchase of Appliances</fullName>
            </value>
            <value>
                <fullName>Vehicle Financing</fullName>
            </value>
            <value>
                <fullName>Wedding Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>