force-app/main/default/objects/Loan_Calculation_Product__c/fields/Loan_to_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value_Number__c</fullName>
    <description>Loan to Value</description>
    <label>Loan to Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>