force-app/main/default/objects/Loan_Calculation_Product__c/fields/Market_Value_of_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Vehicle_Number__c</fullName>
    <label>Market Value of Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>