force-app/main/default/objects/Loan_Calculation_Product__c/fields/Method_of_Fee_Payment_List__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Fee_Payment_List__c</fullName>
    <label>Method of Fee Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added to Loan</fullName>
            </value>
            <value>
                <fullName>Deducted from Loan</fullName>
            </value>
            <value>
                <fullName>Deduct from JN Account</fullName>
            </value>
            <value>
                <fullName>Paid out of Pocket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>