force-app/main/default/objects/Loan_Calculation_Product__c/fields/Minimum_of_Purchase_Price_Market_Number__c.field-meta.xml
<CustomField>
    <fullName>Minimum_of_Purchase_Price_Market_Number__c</fullName>
    <label>Minimum of Purchase Price &amp; Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>