force-app/main/default/objects/Loan_Calculation_Product__c/fields/Minimum_Payment_per_Credit_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_per_Credit_Limit_Number__c</fullName>
    <description>Minimum Payment as per Credit Limit</description>
    <label>Minimum Payment as per Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>