force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_Compulsory_Savings_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Compulsory_Savings_Number__c</fullName>
    <label>Monthly Compulsory Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>