force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_Creditor_Life_Premium_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Creditor_Life_Premium_Number__c</fullName>
    <description>Monthly Creditor Life Premium as per Credit Limit</description>
    <label>Monthly Creditor Life Premium per Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>