force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_Interest_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Rate_Number__c</fullName>
    <label>Monthly Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>