force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_JNGI_Motor_Premium_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_JNGI_Motor_Premium_Number__c</fullName>
    <label>Monthly JNGI Motor Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>