force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_P_I_Life_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_P_I_Life_Insurance_Premium__c</fullName>
    <description>Monthly P&amp;I (Life Insurance Premium)</description>
    <label>Monthly P&amp;I (Life Insurance Premium)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>