force-app/main/default/objects/Loan_Calculation_Product__c/fields/Monthly_PI_Processing_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PI_Processing_Fee_Number__c</fullName>
    <label>Monthly P&amp;I Processing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>