force-app/main/default/objects/Loan_Calculation_Product__c/fields/Months_Number__c.field-meta.xml
<CustomField>
    <fullName>Months_Number__c</fullName>
    <label>Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>