force-app/main/default/objects/Loan_Calculation_Product__c/fields/Motor_Vehicle_Deposit_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Deposit_Percentage_Number__c</fullName>
    <label>Motor Vehicle Deposit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>