force-app/main/default/objects/Loan_Calculation_Product__c/fields/Policy_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit_Number__c</fullName>
    <description>Policy Limit</description>
    <label>Policy Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>