force-app/main/default/objects/Loan_Calculation_Product__c/fields/Processing_Fees_Closing_Cost_GCT_Number__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_Closing_Cost_GCT_Number__c</fullName>
    <description>Processing Fees Closing Cost(including GCT)</description>
    <label>Processing Fees Closing Cost(GCT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>