force-app/main/default/objects/Loan_Calculation_Product__c/fields/Processing_Fees_including_GCT_Number__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_including_GCT_Number__c</fullName>
    <label>Processing Fees (including GCT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>