force-app/main/default/objects/Loan_Calculation_Product__c/fields/Proposed_Savings_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Savings_Number__c</fullName>
    <label>Proposed Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>