force-app/main/default/objects/Loan_Calculation_Product__c/fields/Proposed_Savings_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Savings_Percentage_Number__c</fullName>
    <label>Proposed Savings Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>