force-app/main/default/objects/Loan_Calculation_Product__c/fields/Purchase_Price_of_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_of_Vehicle_Number__c</fullName>
    <label>Purchase Price of Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>