force-app/main/default/objects/Loan_Calculation_Product__c/fields/Repayment_Method_List__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method_List__c</fullName>
    <description>Repayment Method</description>
    <label>Repayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary Deduction</fullName>
            </value>
            <value>
                <fullName>Standing Order</fullName>
            </value>
            <value>
                <fullName>Over The Counter</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Dividends</fullName>
            </value>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Remittances</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>