force-app/main/default/objects/Loan_Calculation_Product__c/fields/Requested_Credit_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit_Number__c</fullName>
    <description>Requested Credit Limit</description>
    <label>Requested Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>