force-app/main/default/objects/Loan_Calculation_Product__c/fields/Stamp_Duty_Number__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Number__c</fullName>
    <description>Stamp Duty</description>
    <label>Stamp Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>