force-app/main/default/objects/Loan_Calculation_Product__c/fields/Starting_Limit_Number__c.field-meta.xml
<CustomField>
    <fullName>Starting_Limit_Number__c</fullName>
    <description>Starting Limit</description>
    <label>Starting Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>