force-app/main/default/objects/Loan_Calculation_Product__c/fields/Supplementary_Card_Holder_Count_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Card_Holder_Count_Number__c</fullName>
    <description>Number of Supplementary Card Holders</description>
    <label>Number of Supplementary Card Holders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>