force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Closing_Costs_By_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Closing_Costs_By_Client_Number__c</fullName>
    <label>Total Closing Costs Financed By Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>