force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Closing_Costs_Financed_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Closing_Costs_Financed_Number__c</fullName>
    <description>Total Closing Costs Financed By JN</description>
    <label>Total Closing Costs Financed By JN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>