force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Compulsory_Savings_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Compulsory_Savings_Balance_Number__c</fullName>
    <description
  >Total Compulsory Savings Balance(Over Repayment Period)</description>
    <label>Total Compulsory Savings Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>