force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Interest_Payment_Repayment_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Payment_Repayment_Number__c</fullName>
    <description>Total Interest Payment(Over Repayment Period)</description>
    <label>Total Interest Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>