force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Loan_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount_Number__c</fullName>
    <description>Total Loan amount</description>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>