force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Monthly_PI_Loan_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_PI_Loan_Payment_Number__c</fullName>
    <description>Total Monthly P&amp;I Loan Payment</description>
    <label>Total Monthly P&amp;I Loan Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>