force-app/main/default/objects/Loan_Calculation_Product__c/fields/Total_Monthly_Saving_Loan_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Saving_Loan_Payment_Number__c</fullName>
    <description>Total Monthly Loan Payment + Monthly Loan Savings</description>
    <label>Total Monthly Saving Loan Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>